<resources>
    <string name="app_name">Melody</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rest_list">Restaurant List</string>
    <string name="title_activity_rest1">Rest1</string>
    <string name="title_activity_rest2">Rest2</string>
    <string name="title_activity_rest3">Rest3</string>
    <string name="title_activity_rest4">Rest4</string>
    <string name="title_activity_recommend">Recommend</string>
    <string name="food">Food</string>
    <string name="beverages">Beverages</string>

    <string name="button1">Click Me</string>
    <string name="textview1">Does it work?</string>
    <string name="textview2">Your Answer!</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="Blookaround">Look Around</string>
    <string name="Bbroadcasts">Broadcast</string>
    <string name="Bpromotions">Promotions</string>
    <string name="Bsettings">Settings</string>
    <string name="Bvisible">Visible</string>
    <string name="Binvisible">Invisible</string>
    <string name="title_activity_look_around">Look Around</string>
    <string name="title_activity_proadcast">Broadcast</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Enter a Message</string>
    <string name="title_activity_promotions">Promotions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_broadcast">Broadcast</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_my_location">MyLocation</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="Plus">+</string>
    <string name="Ok">OK</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="LoginMsg">This app will send a one time message to verify your phone number. Carrier SMS charges may apply.</string>
    <string name="ConfirmMsg">Please confirm your country code and enter your phone number.</string>


    <string name="last_update_time_label">Last location update time: </string>

    <string name="location_updated_message">Location updated</string>
    <string name="title_activity_phone_login">PhoneLogin</string>
    <string name="title_activity_choose_country">Choose a country</string>
    <string name="title_activity_sms_verification">SMS Verification</string>


    <string name="ConfirmatoinTxt">Sending SMS to</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="verifytext1">Please make sure you have a working SMS plan</string>
    <string name="verifytxt2">Sit back and relax. We will notify you when we are done verifying</string>
    <string name="smsReceived">SMS Received</string>
    <string name="VerifiedText">Please Tab on Submit to continue</string>


    <string name="submit_code">Submit</string>
    <string name="title_activity_login_profile">Login Profile</string>

    <!-- Nav Drawer Menu Items -->

    <string-array name="navigation_drawer_items_array">
        <item>Restaurant</item>
        <item>Shopping Cart</item>
        <item>Order Tracking</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
