<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fyp.melody.SmsVerification"
    android:background="@android:color/white">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:id="@+id/firstLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ConfirmatoinTxt"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:id="@+id/info_text_1"
            android:paddingBottom="16dp"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_text_1"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/PhoneNumber"
                android:textSize="24sp"

                android:id="@+id/phone_number_view" />
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/edit_phone_number_button" />

        </LinearLayout>

        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="16dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            style="@android:style/Widget.ProgressBar.Horizontal"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondlayout"
        android:layout_below="@+id/firstLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_text_2"
            android:text="@string/verifytext1"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:paddingTop="5dp"
            android:paddingLeft="3dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify_code"
            android:layout_below="@+id/info_text_2"
            android:hint="Code"

            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_code"
            android:text="@string/verifytxt2"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:id="@+id/info_text_3" />

    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_code"
        android:layout_below="@+id/secondlayout"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:text="@string/submit_code"
        android:textAllCaps="false"
        android:textSize="20sp"
        />
</RelativeLayout>
